# facebook-data-miner

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConversationAnalyzer.py  Conversations.py  FacebookData.py  Friends.py  Group.py  Individual.py  Makefile  Me.py  MessagingAnalyzer.py  Miner.py  People.py  Pipfile  README.md  Visualizer.py  __main__.py  configuration.yml  explore.ipynb  facebook_data_miner.ipynb  lint-test-log  mypy.ini  pyproject.toml  requirements.txt  sample.configuration.yml  scripts.sh  setup.cfg  setup.py  utils.py
miner/: Analyzer.py  App.py  Conversation.py  ConversationAnalyzer.py  ConversationStats.py  Conversations.py  FacebookData.py  Friends.py  Group.py  Individual.py  Me.py  Messages.py  Messaging.py  MessagingAnalyzer.py  People.py  Person.py  Visualizer.py  __main__.py  app.py  cli.py  cli_adapters.py  data.py  friends.py  group.py  me.py  people.py  person.py  profile_information.py  report.py  requirements.txt  utils.py  visualizer.py
notebooks/: API.ipynb  CLI.ipynb
tests/: TestConversationAnalyzer.py  TestConversations.py  TestFriends.py  TestMessagingAnalyzer.py  TestPeople.py  conftest.py  helpers.py  playground.py  test_CLI_notebook.py  test_Conversation.py  test_ConversationAnalyzer.py  test_Conversations.py  test_Friends.py  test_Messaging.py  test_MessagingAnalyzer.py  test_People.py  test_analyzer_stats_filtering.py  test_app.py  test_conversation.py  test_conversation_analyzer.py  test_conversation_stats.py  test_conversations.py  test_decorators.py  test_facebookdata.py  test_friends.py  (+7 more)
(+27 files in other folders)
