[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | miner/trash.py
)
'''

[tool.coverage.run]
command_line = "-m pytest"
omit = [
    "*/tests/*",
    "*/virtualenvs/*",
]

[tool.coverage.report]
fail_under = 90.0
skip_empty = true
show_missing = true